borrower repo to userRepository