@@ -2,11 +2,11 @@ package com.manage.library.service;
 
 import com.manage.library.dto.BookDto;
 import com.manage.library.entity.Book;
+import com.manage.library.entity.BookStatus;
 import com.manage.library.repository.BookRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AdminService {
@@ -21,6 +21,12 @@ public class AdminService {
         Book book = Book.builder()
                 .title(bookDto.getTitle())
                 .author(bookDto.getAuthor())
+                .isbn(bookDto.getIsbn())
+                .publicationDate(bookDto.getPublicationDate())
+                .status(BookStatus.AVAILABLE)
+                .borrower(null)
+                .issuedDate(null)
+                .returnDate(null)
                 .build();
         bookRepository.save(book);
         return "Book added successfully";
@@ -29,16 +35,24 @@ public class AdminService {
     public List<BookDto> getBooks() {
         return bookRepository.findAll().stream()
                 .map(book -> BookDto.builder()
+                        .id(book.getId())
                         .title(book.getTitle())
                         .author(book.getAuthor())
+                        .isbn(book.getIsbn())
+                        .status(book.getStatus().name())
+                        .publicationDate(book.getPublicationDate())
+                        .borrowerId(book.getBorrower() != null && book.getBorrower().getId() != null ? book.getBorrower().getId() : null)
+                        .issuedDate(book.getIssuedDate())
+                        .returnDate(book.getReturnDate())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String updateBook(Long id, BookDto bookDto) {
         Book book = bookRepository.findById(id).orElseThrow();
         book.setTitle(bookDto.getTitle());
         book.setAuthor(bookDto.getAuthor());
+        book.setIsbn(bookDto.getIsbn());
         bookRepository.save(book);
         return "Book updated successfully";
     }
